package org.example;

public interface ICoseguro {
    public int getDescuento();
    public int getAntiguedad();
    public double getMontoCoberturaViaje();
}
